# Scroll-Scribe

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  PROMPT.md  README.md  crawl.json  fastapi-links.csv  main.py  pyproject.toml  requirements.txt  results.md  ruff.toml  runscript.sh  scrollscribe.py  test_performance.py  test_urls.txt  typer.csv  typer.json  typer.txt  urls.csv  urls.json  zed-cheatsheet.md
REFACTOR/: Phase2.md  PostMVP.md  bug.md
app/: __main__.py  cli.py  config.py  constants.py  discovery.py  fast-processing.py  fast_discovery.py  fast_processing.py  processing.py  scrollscribe.py  simple_link_extractor.py  sitemap_finder.py  utils.py
app/utils/: error_classification.py  exceptions.py  logging.py  retry.py  url_helpers.py  validation.py
archive/cli/: args.py  main.py
crawl4ai_docs_test2/: page_001_docs.crawl4ai.com.md  page_002_advanced_advanced-features.md  page_003_advanced_crawl-dispatcher.md  page_004_advanced_file-downloading.md  page_005_advanced_hooks-auth.md  page_006_advanced_identity-based-crawling.md  page_007_advanced_lazy-loading.md
data/: django_urls_example.txt  litellm-model_prices_and_context_window.json  perfionAPIurls.txt
docs/: ARCHITECTURE.md  ConfigManager.md  FAST-DISCOVER.md  LOGGING.md  Phase2.md  Phase3MVP.md  testing_bug.md
output/: Data-web-wervice.html  page_001_wiki_spaces_PIM_pages_244330744_Perfion+API.md  page_002_wiki_spaces_PIM_pages_244330766_Installation+guide.md  page_003_wiki_spaces_PIM_pages_244330835_Media+Services.md  page_004_wiki_spaces_PIM_pages_244330879_Report+Service.md  page_005_wiki_spaces_PIM_pages_244330892_Data+Web+Service.md  page_006_wiki_spaces_PIM_pages_244330909_Perfion+GetVersion+Query.md  page_007_wiki_spaces_PIM_pages_244330928_Perfion+Execute+Action+Query.md  page_008_wiki_spaces_PIM_pages_244330947_REST+API+service.md  page_010_wiki_spaces_PIM_pages_244331056_Logging+from+the+Perfion+API.md  page_011_wiki_spaces_PIM_pages_244332821_Perfion+Query+Reference.md  page_012_wiki_spaces_PIM_pages_244332898_The+Perfion+Query+SELECT.md  page_013_wiki_spaces_PIM_pages_244333000_The+Perfion+Query+UPDATEhttps___perfion.atlassian.net_wiki_spaces_PI.md  page_014_wiki_spaces_PIM_pages_244333038_The+Perfion+Query+DELETE.md  page_015_wiki_spaces_PIM_pages_244333057_The+Perfion+Query+-+FROM.md  page_017_wiki_spaces_PIM_pages_244333109_The+Perfion+Query+-+ORDER.md  page_018_wiki_spaces_PIM_pages_244333145_The+Perfion+Query+-+HAVING.md
output/django_markdown/: page_001_en_5.2.md  page_002_en_5.2_contents.md  page_003_en_5.2_faq.md  page_004_en_5.2_faq_admin.md  page_004_en_5.2_intro_tutorial03.md  page_005_en_5.2_faq_contributing.md  page_006_en_5.2_faq_general.md  page_007_en_5.2_faq_help.md  page_008_en_5.2_faq_install.md  page_009_en_5.2_faq_models.md  page_010_en_5.2_faq_troubleshooting.md  page_011_en_5.2_faq_usage.md  page_017_en_5.2_howto_custom-file-storage.md  page_018_en_5.2_howto_custom-lookups.md  page_020_en_5.2_howto_custom-model-fields.md  page_021_en_5.2_howto_custom-shell.md  page_022_en_5.2_howto_custom-template-backend.md  page_024_en_5.2_howto_delete-app.md  page_026_en_5.2_howto_error-reporting.md  page_030_en_5.2_howto_outputting-csv.md  page_031_en_5.2_howto_outputting-pdf.md  page_032_en_5.2_howto_overriding-templates.md  page_034_en_5.2_howto_static-files_deployment.md  page_036_en_5.2_howto_windows.md  page_038_en_5.2_internals.md  page_044_en_5.2_internals_release-process.md  page_045_en_5.2_internals_security.md  page_047_en_5.2_intro_contributing.md  page_058_en_5.2_intro_tutorial07.md  page_062_en_5.2_misc_api-stability.md  page_063_en_5.2_misc_design-philosophies.md  page_064_en_5.2_misc_distributions.md  page_065_en_5.2_py-modindex.md  page_070_en_5.2_ref_class-based-views_base.md  page_075_en_5.2_ref_class-based-views_mixins.md  page_082_en_5.2_ref_contrib_gis.md  page_083_en_5.2_ref_contrib_humanize.md  page_086_en_5.2_ref_contrib_redirects.md  page_087_en_5.2_ref_contrib_sitemaps.md  page_089_en_5.2_ref_contrib_staticfiles.md  (+1 more)
test/: test_cli_utils.py  test_config.py  test_discovery_workflow.py  test_error_handling.py  test_exceptions.py  test_fast_discovery.py  test_fast_processing.py  test_logging.py  test_process_workflow.py  test_processing.py  test_retry.py  test_scrape_workflow.py
tests/: test_builtin_browser.py  test_clean_output.py  test_clean_scrollscribe.py  test_compatibility.py  test_csv_support.py  test_fast_discovery.py  test_file_formats.py  test_fixed_config.py  test_litellm_attributes.py  test_original_works.py  test_processing.py  test_urls.txt  test_urls_small.txt
tests/test_output/: page_001_forms_post.md
(+177 files in other folders)
