[project]
name = "scrollscribe"
version = "0.3.0"
description = "AI-powered documentation scraper that transforms websites into clean, filtered Markdown"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.6.3",
    "beautifulsoup4>=4.12.0",
    "requests>=2.26.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "rich-argparse>=1.7.0",
    "tenacity>=8.0.0",
    "questionary>=2.1.0",
]

[project.scripts]
scrollscribe = "app.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.basedpyright]
typeCheckingMode = "basic"
reportUnreachable = true
reportUnnecessaryTypeIgnoreComment = false
reportIgnoreCommentWithoutRule = false
reportUnusedVariable = "none"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "data",
    "docs",
    "logs",
]
pythonVersion = "3.10"
