[project]
name = "scrollscribe"
version = "0.3.0"
description = "AI-powered documentation scraper that transforms documentation websites into clean, filtered Markdown"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "JamesN-dev" }]
dependencies = [
    "crawl4ai>=0.6.3",
    "beautifulsoup4>=4.12.0",
    "requests>=2.26.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "tenacity>=8.0.0",
    "typer>=0.16.0",
]

[project.scripts]
scrollscribe = "app.cli:main"
scribe = "app.cli:main"

[tool.uv]
package = true

[project.urls]
Homepage = "https://github.com/JamesN-dev/scrollscribe"
Source = "https://github.com/JamesN-dev/scrollscribe"
Issues = "https://github.com/JamesN-dev/scrollscribe/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.basedpyright]
typeCheckingMode = "basic"
reportUnreachable = true
reportUnnecessaryTypeIgnoreComment = false
reportIgnoreCommentWithoutRule = false
reportUnusedVariable = "none"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "data",
    "docs",
    "logs",
]
pythonVersion = "3.10"
